testing/Travis/testcases/Check/ShouldFail/Issue.adl
CONTEXT Issue

RELATION a[X*Y] = [("aap", "noot"), ("mies", "zus")]
RELATION b[X*Y]

RULE a |- b
VIOLATION (TXT "a bevat (", SRC I, TXT ",", TGT I, TXT "), maar b bevat ", SRC b, TXT ".")


ENDCONTEXT